@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.571 2006/02/14 00:04:13 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.572 2006/02/14 15:29:39 rocket Exp $
+
+  14 Feb 2006; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  fix for failure when root_overlay is not set
 
   14 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/support/bootloader-setup.sh:
